--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
