--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,18 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/index",
-    "typings": "dist/index",
+    "main": "lib/index",
+    "typings": "lib/index",
     "scripts": {
         "postinstall": "npm install typescript && tsc",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "tsc && node dist/index.js",
-        "dev": "nodemon src/index.ts"
+        "start": "tsc && node lib/index.js",
+        "dev": "nodemon src/index.ts",
+        "dep": "tsc index.ts && node index.js"
     },
-    "engines": { "node": "v14.17.2" },
+    "engines": {
+        "node": "v14.17.2"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -22,7 +25,7 @@
         "firebase-admin": "^10.0.2",
         "morgan": "^1.10.0",
         "tsc": "^2.0.4",
-        "typescript": "^4.6.4"
+        "typescript": "^4.7.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
